Fixed z-index problem with mobile filter dropdowns.

--- a/client/src/assets/index.css
+++ b/client/src/assets/index.css
@@ -410,6 +410,10 @@ a:hover {
   text-align: center;
 }
 
+.filter-index-2 {
+  z-index: 2;
+}
+
 /* Filter - Multi Dropdown */
 .hidden {
   display: none;
